Server and API fixes
